[package]
name = "async-instrumenter"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/MolotovCherry/async-instrumenter"
description = "A instrument wrapper which allows one to time how long your future takes to execute"
categories = [
    "asynchronous",
    "development-tools::profiling",
    "development-tools::debugging",
]
keywords = ["instrument", "async", "profile", "performance", "tracing"]

[dependencies]
pin-project = "1.1.3"
log = "0.4.20"
